[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ware_ops_algos"
version = "0.1.0"
description = "Warehouse optimization algorithms and utilities"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Janik Bischoff" }]
dependencies = [
    "gurobipy>=13.0",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "seaborn>=0.13",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]
docs = [
    "sphinx",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "furo",
    "myst-nb",
    "nbsphinx",
]

[tool.setuptools.packages.find]
where = ["src"]