[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ware_ops_algos"
version = "0.1.0"
description = "Warehouse optimization algorithms and utilities"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Janik Bischoff" }]
dependencies = [
    "gurobipy",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]

docs = [
    "sphinx",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "furo",
    "myst-nb",
    "nbsphinx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ware_ops_algos" = [
    "algorithms/algo_cards/*.yaml",
    "algorithms/algo_cards/*.yml",
]